<resources>
    <string name="app_name">Pomodoro</string>
    <string name="timer">25:00</string>
    <string name="startBtn">Start</string>
    <string name="stopBtn">Stop</string>
    <string name="currentSession">Work</string>
    <string name="progressText">Progress</string>
    <string name="home">Home</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="statistic">Statistic</string>
    <string name="workTimeNumber">25</string>
    <string name="work_time">Work</string>
    <string name="breakTimeNumber">5</string>
    <string name="breakTimeText">Break</string>
    <string name="duration">Duration</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="longBreakText">Long</string>
    <string name="longBreak">30</string>
    <string name="taskname">TaskName</string>
    <string name="add_new">Add new</string>
</resources>
